@@ -64,7 +64,7 @@ and rrsig = {
 *)
 and rdata =
   | A of Ipaddr.V4.t list
-  | AAAA of cstr list
+  | AAAA of Ipaddr.V6.t list
   | AFSDB of (uint16 * dnsnode) list
   | CNAME of dnsnode list
   | HINFO of (cstr * cstr) list
